[gd_scene load_steps=3 format=3 uid="uid://dxnu0uqo5w5xm"]

[ext_resource type="Script" uid="uid://bnoavg443lnva" path="res://engine/utility/linear_progress_tracker_2d.gd" id="1_nfq4q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4630g"]
size = Vector2(1600, 1500)

[node name="LinearProgressTracker2D" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_nfq4q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4630g")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
